--- a/SRW_160822.tex
+++ b/SRW_160822.tex
@@ -34,9 +34,9 @@
 \newcommand{\etau}{\eta_{\rm u}^{(j)}}
 \def\coloneqq{\mathrel{\mathop:}=}
 
-\jtitle{全二重通信無線LANにおける公平性とQoSの改善}
+\jtitle{工事中}
 %\jsubtitle{}
-\etitle{Fairness and QoS Improvement for In-Band Full-Duplex WLANs}
+\etitle{in Progress}
 %\esubtitle{}
  \alignorder=4
  \breakauthorline{4}
