--- a/SRW_161219.tex
+++ b/SRW_161219.tex
@@ -39,9 +39,9 @@
 \newcommand{\mthnk}{{\mathcal N}_k}
 \def\coloneqq{\mathrel{\mathop:}=}
 
-\jtitle{上りOFDMA適用による全二重通信無線LANの遅延時間削減}
+\jtitle{上りOFDMAによる全二重通信無線LANの遅延時間削減}
 %\jsubtitle{}
-\etitle{Delay Reduction of In-Band Full-Duplex wirless LAN using Uplink OFDMA system}
+\etitle{Station Selection scheme for In-Band Fulll-Duplex WLAN with UL-OFDMA for Reducting Transmission Delay}
 %\esubtitle{}
  \alignorder=4
  \breakauthorline{4}
@@ -69,12 +69,12 @@
 	無線LANの大容量化に向けて，自己干渉除去技術により送信と受信を同一帯域で同時に行う全二重通信無線LANが有望である．
 	特に，1台のAP（Access Point）とAPへの上り通信を行うSTA（Station），
 	APからの下り通信を受信するSTAの3台によるUFD（user-multiplexing Unidirectional Full-Duplex）通信は自己干渉除去技術を持たないSTAにも適用可能であるという利点がある．
-	従来方式のUFD通信では，一定時間内におけるSTAの送信機会が減少し，STAが行う上り通信の遅延時間が大きくなってしまうという問題がある．
-	これは，下りのTCP通信に対して返送されるTCP-ACKの遅延が増大し，TCPスループットを低下させる．
-	本稿ではSTAの送信機会を増加させるため，上り通信にOFDMAを適用する方式を提案する．
-	半二重通信とUFD通信を併用する従来方式にOFDMAを加え，半二重通信，UFD通信，OFDMA，UFD通信とOFDMAの組み合わせの4方式を用いる．
-	遅延時間を考慮した最適化問題を設計し，それを解くことで，確率的に4つの通信方式の選択と通信に参加するSTAの選択を行う．
-	本手法の有効性を計算機シミュレーションにより評価する．
+	しかし，UFD通信では下り通信の送信機会が大きく増加しシステムスループットは向上するものの，
+	ユーザ間干渉による伝送速度の低下やSTAの送信頻度の低下のため，STAからの上り通信の遅延時間が大きく増加する問題がある．
+	STAの上り送信の遅延時間削減に向け，上りOFDMAを用いた全二重通信無線LANにおける送受信端末選択手法を提案する.
+	上りOFDMAにより，1回の送信機会に複数のSTAの同時送信を可能とし，STAの送信機会を向上し遅延時間を削減する．
+	送受信をおこなうSTA組の決定問題を最適化問題として定式化し，APは本最適化問題より各STAの選択確率を決定する．
+	シミュレーション評価により，提案方式はシステムスループットを大きく低下させることなく遅延時間を半二重通信と同等まで削減できることを示した．
 \end{jabstract}
 \begin{jkeyword}
 	全二重通信無線LAN，ユーザ間干渉，遅延時間, OFDMA
@@ -82,11 +82,10 @@
 \begin{eabstract}
 	Self-interference cancellation techniques enable in-band full-duplex wireless local area networks (WLANs), where nodes can  transmit and receive simultaneously in the same frequency band.
 	In particular, user-multiplexing unidirectional full-duplex (UFD) communication, where a full-duplex access point (AP) transmits a frame to a station (STA) and receives a frame from another STA, is a promising technology for broadband WLANs, since UFD is applicable for the conventional STAs without self-interference cancellation capability.
-	However, the UFD communication causes a long data frame transmission delay.
-	This probrem decreases the transmission control protocol (TCP) throughput due to TCP-acknowledgement (ACK) frames delay.
-	In this paper, we propose a scheme to reduce the date frame transmission delay of STAs.
+	However, the UFD communication increases an uplink transmission delay.
+	In this paper, we propose a station selection scheme where combination of sender and receiver STAs are adaptively selected in order to increase a throughput and reduce the transmission delay.
 	The scheme uses the UFD communication and uplink OFDMA system, and increases transmission opportunities of STAs.
-	Simulation results show that the proposed scheme reduces the delay to the same level of the half-duplex system.
+	Simulation results show that the proposed scheme reduces the delay to the same level as the half-duplex system.
 
 \end{eabstract}
 \begin{ekeyword}
@@ -102,46 +101,51 @@
 	近い将来5\,GHz帯の逼迫も懸念されることから，無線LANのさらなる大容量化は急務である.
 	大容量化を実現する方法の一つとして，送信と受信を同じ周波数帯で同時に行う全二重通信無線LANが有望である．
 	全二重通信無線LANでは上り通信と下り通信を同一帯域で同時に行うため，システムスループットを向上させることができる．
-	全二重通信無線LANには，図\ref{fig:topology}\subref{fig:bfd}のようなAP（Access Point）の送信先STA（station）とAPへの上り通信を行うSTAが同じである双方向全二重（BFD: Bidirectional Full-Duplex）通信と，
+	全二重通信無線LANには，図\ref{fig:topology}\subref{fig:bfd}に示すAP（Access Point）からの下り通信を受信するSTA（station）と上り通信を行うSTAが同一である双方向全二重（BFD: Bidirectional Full-Duplex）通信と，
 	図\ref{fig:topology}\subref{fig:ufd}に示すような上り通信を行うSTAと下り通信を受信するSTAが異なる全二重（UFD: user-multiplexing Unidirectional Full-Duplex）通信がある．
-	本稿では，このUFD通信のうち，STA $j$からSTA $i$へのAPを介してのリレー通信ではなく，
-	STA $i$，$j$はそれぞれコアネットワークからの下りトラヒックの受信，コアネットワークへの上りトラヒックの送信を行っているものを扱う．
-	UFD通信にはSTAにおける自己干渉が存在しないため，
-	BFD通信と異なり自己干渉除去技術を持たない従来のSTAにも適用可能であるという利点がある．
-	このUFD通信を用いた無線LANでは二つの干渉が問題となる．
-	一つは，送受信を行っているAPにおいて，送信信号が所望の受信信号に干渉を及ぼす自己干渉である．
-	自己干渉を受けるAPにとって干渉波は自身の送信信号であり既知であるため，
-	自己干渉除去技術を用いて自己干渉を最大110\,dB除去できることが示されている~\cite{fdmac, stanford1}．
-	他の一つは，STA $j$の送信信号が他方のSTA $i$の受信信号に干渉を及ぼすユーザ間干渉である．
-	ユーザ間干渉では，干渉を受けるSTA $i$にとって干渉波がSTA $j$の送信する未知の信号であるため，
+%	本稿では，このUFD通信のうち，STA $j$からSTA $i$へのAPを介してのリレー通信ではなく，
+%	STA $i$，$j$はそれぞれコアネットワークからの下りトラヒックの受信，コアネットワークへの上りトラヒックの送信を行っているものを扱う．
+%	UFD通信にはSTAにおける自己干渉が存在しないため，
+%	BFD通信と異なり自己干渉除去技術を持たない従来のSTAにも適用可能であるという利点がある．
+%	このUFD通信を用いた無線LANでは二つの干渉が問題となる．
+%	一つは，送受信を行っているAPにおいて，送信信号が所望の受信信号に干渉を及ぼす自己干渉である．
+%	自己干渉を受けるAPにとって干渉波は自身の送信信号であり既知であるため，
+%	自己干渉除去技術を用いて自己干渉を最大110\,dB除去できることが示されている~\cite{fdmac, stanford1}．
+	全二重通信では送信と受信を同時に行うため，送信信号が所望受信信号に干渉を及ぼす自己干渉が生じる．
+	自己干渉波は既知の信号であることを用いて干渉を除去する技術が検討されており，最大で110\,dB除去できることが示されている~\cite{fdmac, stanford1}．
+	BFD通信では自己干渉がAPとSTAの両方で生じる．
+	そのため，干渉除去機能を有しない既存の無線LAN機器には適用できない．
+	UFD通信ではSTAにおける自己干渉が生じないため, 自己干渉除去機能を持たない従来のSTAにも適用可能であるという利点がある．
+	一方で，UFD通信ではSTA $j$の送信信号が他方のSTA $i$の受信信号に干渉を及ぼすユーザ間干渉が生じる．
+	ユーザ間干渉は，干渉を受けるSTA $i$にとって干渉波がSTA $j$の送信する未知の信号であるため，
 	自己干渉のように除去することが困難である．
 	\par
 	このユーザ間干渉の影響を低減するためには，干渉の大きさを考慮して上り通信を行うSTAと下り通信を受信するSTAの適切な組み合わせを選択することが必要である~\cite{promac}．
-	これまで著者らはUFD通信におけるSTA選択を最適化問題として定式化し，システムスループットとSTA間の送信機会に関する公平性を両立させる手法を提案している~\cite{promac_fair}．
+	これまで著者らはUFD通信における送受信STA選択手法を最適化問題として定式化し，システムスループットとSTA間の送信機会に関する公平性を両立するアクセス制御方式を提案している~\cite{promac_fair}．
 	\par
-	しかし，APと比べSTAのデータフレームの長さが短い場合に，UFD通信では半二重通信を用いる場合と比較して，
+	しかし，APと比べSTAのデータフレーム長が短い場合に，UFD通信では半二重通信を用いる場合と比較して，
 	上り通信を行うSTAの遅延時間が増大してしまうという課題が残っている．
-	これは，図\ref{fig:problem}に示すように，UFD通信では1回の通信にAPの長いデータフレームの分だけ時間がかかり，
-	一定時間でみたときに半二重通信と比較してSTAの送信機会が減少するためである．
-	上り通信の遅延時間が増大すると，TCP（Transmissioin Control Protocol）の下り通信に対して返送されるTCP-ACK(Acknowledgement)の送信が遅れ，
-	その結果，下り通信のTCPスループットが低下する．
+	これは，図\ref{fig:problem}に示すように，UFD通信ではユーザ間干渉により伝送速度が低下するため一回の送信時間が増加し，
+	かつ，下り通信の送信頻度が増加するため，半二重通信と比較してSTAの送信頻度が低下するためである．
+	上り通信の遅延時間の増大は，TCP（Transmissioin Control Protocol）下り通信におけるTCP-ACK(Acknowledgement)パケットの遅延を増加させ，
+	結果的にTCPスループットの低下が生じる[参考文献]．
 	\par
-	本稿では，遅延時間削減のために図\ref{fig:ofdma}のようにUFD通信に対して，
-	上り通信にOFDMA（Orthogonal Frequency-Division Multiple Access）を用いるSTA選択手法を提案する．
+	本稿では，遅延時間削減に向け，UFD通信の上り通信へOFDMAを適用した無線LANと本無線LANにおける送受信STA選択手法を提案する．
+	図\ref{fig:ofdma}にシステムモデルを示す．
 	OFDMAとは周波数チャネルを複数に分割し，サブキャリアを複数のユーザに割り当て，時間的に並列伝送する方式である．
 	現在策定が進められているIEEE 802.11axにおいて，OFDMAは，短いフレームの並列伝送による周波数利用効率の向上や，
 	TCP-ACKの遅延時間削減によるTCPスループットの向上を実現する技術として期待されている~\cite{ofdma}．
-	提案方式では，このOFDMAによって上り通信を多重化しSTAの送信機会を増加させ，遅延時間を削減する．
-	~\cite{promac_fair}のUFD通信でのユーザ間干渉を低減するための最適化問題，STA選択手法をOFDMAを適用できるように拡張し，
+	提案方式では，OFDMA導入により，送受信STAの選択において複数の上り通信STAを選択可能とし，
+	STAの送信機会を向上することで遅延を削減する．
+	本稿では，~\cite{promac_fair}で提案する送受信STA選択最適化問題を拡張し，上りOFDMAに対応したSTA選択を可能とする．
 	半二重通信，UFD通信，OFMDA通信，UFD通信とOFDMA通信の組み合わせの4つの通信方式を切り替え，STA選択を行う手法を提案する．
-	4つの通信方式を併用することで，干渉が大きくUFD通信を行えないような位置にあるSTAは半二重通信を行い，
-	干渉が小さく，大きなスループットを期待できるSTAにはUFD通信を通信を用い，
+	送受信STA組を適応的に選択することで，干渉が大きくUFD通信を行えないような位置にあるSTAは半二重通信を行い，
+	干渉が小さく，大きなスループットを期待できるSTAにはUFD通信を用い，
 	多くのSTAへ送信機会を与えたい場合はOFDMAを用いるといったような状況に応じた制御が可能となる．
 	\par
 	本稿の構成は以下のとおりである．第2章で本稿で扱うシステムモデルについて述べ，
-	第3章では従来方式の問題点について述べる．
-	更に，第4章において提案方式について述べ，第5章では提案方式の有効性をシミュレーションによって評価する．
-	最後に第6章でまとめとする．
+	第3章において提案方式について述べる．
+	第4章では提案方式の有効性をシミュレーションによって評価し，最後に第5章でまとめとする．
 
 	\begin{figure}[t]
 		\centering
@@ -176,34 +180,32 @@
 	\begin{figure}[t]
 		\centering
 		\epsfig{file=fig/pos.eps, scale=0.6}
-		\caption{システムモデル（中心に設置されたAPとランダムに配置されたSTA）}
+		\caption{APとSTAの配置の一例}
 		\label{fig:model}
 	\end{figure}
 
-	本稿で検討するシステムモデルを図\ref{fig:model}に示す．
+	図\ref{fig:model}にAPとSTAの配置の一例を示す．
 	1台のAPが$L$\,m四方の領域の中心に設置され，その周りに$N$台のSTAがランダムに配置されているとする．
 	それらSTAのインデックス集合を$\mN=\{1,2,...,N\}$とする．
 	OFDMAによる多重化は簡単のため二多重までとし，
 	この$N$台のSTAの中から，図\ref{fig:ofdma}のようにAPからの下り通信を受信するSTA $i$と，
 	APへの上り通信を行うSTA $j$，$k$を選び出す．
-	このとき，STAの組み合わせを$\sijk$と表現し，$i,\ j,\ k \in \{0\}\cup \mN$であり，
-	STAは自己干渉除去技術を持たずBFD通信はできないと仮定して$i\neq j$かつ$i\neq k$とする．
+	このとき，STAの組み合わせを$\sijk$と表現し，$i,\ j,\ k \in \{0\}\cup \mN$とする．
+	STAは自己干渉除去技術を持たずBFD通信はできないとし，$i\neq j$かつ$i\neq k$とする．
 	また，$i$，$j$，$k$の全てが0になることはないものとする．
 	$i$，$j$，$k$のそれぞれが取る値によって以下の通信方式を定義し，切り替え可能であるものとする．
-	\begin{description}
-		\item[「$i=0$かつ$jk=0$かつ$j+k\neq0$」]\mbox{}
-		\item[または「$i=0$かつ$j=k\neq0$」の場合]\mbox{}\par
-			上りの半二重通信
-		\item[$i\neq0$かつ$j=k=0$の場合]\mbox{}\par
-			下りの半二重通信
-		\item[「$i\neq0$かつ$jk\neq0$かつ$j+k\neq0$」]\mbox{}
-		\item[または「$i\neq0$かつ$j=k\neq0$」の場合]\mbox{}\par
-			UFD通信
-		\item[$i=0$かつ$jk\neq0$かつ$j\neq k$の場合]\mbox{}\par
-			上りOFDMA
-		\item[$i\neq0$かつ$j\neq0$かつ$k\neq0$かつ$j\neq k$の場合]\mbox{}\par
-			OFDMAとUFD通信の組み合わせ
-	\end{description}
+	\begin{itemize}%\setlength{\leftskip}{10pt}
+		\item「$i=0$かつ$jk=0$かつ$j+k\neq0$」または「$i=0$かつ$j=k\neq0$」の場合\par
+			\hspace*{15pt}上りの半二重通信
+		\item「$i\neq0$かつ$j=k=0$」の場合\par
+			\hspace*{15pt}下りの半二重通信
+		\item「$i\neq0$かつ$jk=0$かつ$j+k\neq0$」または「$i\neq0$かつ$j=k\neq0$」の場合\par
+			\hspace*{15pt}UFD通信
+		\item「$i=0$かつ$jk\neq0$かつ$j\neq k$」の場合\par
+			\hspace*{15pt}上りOFDMA
+		\item「$i\neq0$かつ$j\neq0$かつ$k\neq0$かつ$j\neq k$」の場合\par
+			\hspace*{15pt}OFDMAとUFD通信の組み合わせ
+	\end{itemize}
 	\par
 	また，STAの組み合わせを決定する際に用いる推定スループットには，上り下り通信のそれぞれのSINR（Signal-to-Interference plus Noise power Ratio）より導出されるシャノン容量を用いる．
 	\begin{equation}
@@ -211,14 +213,12 @@
 	\end{equation}
 	ただし，$B$は通信に用いる帯域幅である．
 	\par
-	本稿では，遅延時間の指標として送信間隔を用いる．
-	送信間隔とは，STAにおいてあるデータフレームがバッファの先頭に到着してから送信が開始されるまでの時間とする．
-	これは，データフレームがバッファに到着してから先頭に来るまでの時間はトラヒックやバッファサイズ，輻輳制御によって変動することから，
-	無線LANでの通信方式による遅延時間の違いを知るためにはこれらを除く必要があるためである．
+	本稿では，図\ref{fig:standby}に示すようにSTAの遅延時間を，あるデータフレームに対しそのフレームがSTAの送信バッファの先頭に到着した時刻から送信機会を獲得しそのフレームの送信が開始した時刻までの経過時間とする．
+	これは，輻輳制御やバッファ制御の影響を排除した無線メディアアクセス制御における遅延を評価するためである．
 	\begin{figure}[t]
 		\centering
 		\epsfig{file=fig/standby.eps, scale=0.5}
-		\caption{送信待機時間の定義}
+		\caption{遅延時間の定義}
 		\label{fig:standby}
 	\end{figure}
 
@@ -266,6 +266,14 @@
 	本節では，遅延時間の増大を防ぐため，上り通信をOFDMAを用いて多重化することを提案する．
 	OFDMAを用いてSTAの送信機会を増加させることで遅延時間を削減する．
 	STA決定手法は従来方式~\cite{promac_fair}における手法をOFDMAを適用できるように拡張する．
+
+	\begin{figure}[t]
+		\centering
+		\epsfig{file=fig/proccess.eps, scale=0.5}
+		\caption{送受信STA選択手法の手順}
+		\label{fig:process}
+	\end{figure}
+
 	\subsection{STAの組み合わせ決定手法}\label{sec:opt}
 		%まず，STAの組み合わせの集合${\mathcal C}_{\rm half}$，${\mathcal C}_{\rm UFD}$，${\mathcal C}_{\rm OFDMA}$，${\mathcal C}_{\rm OFDMA-UFD}$，${\mathcal C}$を以下のように定義する．
 		%\begin{align}
@@ -273,7 +281,8 @@
 		%	&{\mathcal C}_{\rm UFD} \coloneqq \{\sijk : i,j\in{\mathcal N},\ i\neq j,\ r^{\sij}_{\rm d},\ r^{\sij}_{\rm u}>\epsilon\} \\
 		%	&{\mathcal C}_{\rm OFDMA} \coloneqq \{\sijk : i=0,\ jk\neq0\in{\mathcal N},\ r^{\sij}_{\rm d},\ r^{\sij}_{\rm u}>\epsilon\}
 		%\end{align}
-		まず最初に，このSTA決定手法について概略を述べる．
+		本手法の概略を述べる．
+		本手法の手順は図\ref{fig:process}の通りである．
 		APは全てのSTAの組み合わせについて，各組み合わせで通信が行われた場合のスループットを推定する．
 		APは推定されたスループットと各STAの送信待機時間を用いて最適化問題を解き，
 		各組み合わせで通信が行われる確率を求め，その値を全てのSTAに通知する．
@@ -290,7 +299,7 @@
 		APは$\rijk=r^{(i,j,k)}_{\rm d}+r^{(i,j,k)}_{\rm u1}+r^{(i,j,k)}_{\rm u2}$と，
 		上り通信を行うSTA $j$，$k$の送信待機時間$d^{(j)}$，$d^{(k)}$を用いて以下の最適化問題を解き,
 		各組み合わせで通信が行われる確率$p^{(i,j,k)}$を求める．
-		ただし，送信待機時間とはあるデータフレームがバッファの先頭に到着してからの経過時間である．
+		ただし，送信待機時間とはあるデータフレームがバッファの先頭に到着してから現在時刻までの経過時間である．
 		\begin{align}
 			&{\mathcal P}_1: && {\rm max} \sum_{(i,j,k)\in{\mathcal C}} p^{(i,j,k)}r^{(i,j,k)}(d^{(j)}+d^{(k)})^{\alpha} &&&&&&\\
 			&{\rm subject\ to} && \sum_{k\in\mthnk} \sum_{j\in\mthnj} p^{(i,j,k)} \geq \eta_{\rm d}^{(i)},\ \forall i\in {\mathcal N} \label{eq:etad} \\
@@ -310,17 +319,17 @@
 		これらは，選ばれる確率が0となるSTAが発生しないようにするための条件である．
 		APによって算出された確率$\pijk$はビーコンフレームによって全てのSTAに通知される．
 		この最適化問題で用いられる$d^{(j)}$，$d^{(k)}$は時間変化する値であるため，
-		APは数回のビーコンフレーム送信毎に変化した値を用いてこの最適化問題を解き直し，
+		APは数回のビーコンフレーム送信毎に最新の$\rijk$，$d^{(j)}$，$d^{(k)}$をもとに最適化問題を解き，
 		確率$\pijk$の更新を行う．
 		\par
 		次に，STA $i$，$j$，$k$を決定する方法を述べる．
-		まず最初に，APがSTA $i$の決定を行う．
+		まず最初に，APが下り通信の受信STAとなるSTA $i$の決定を行う．
 		APは以下の式に従って，各STAが下り通信の送信先となる確率$p_{\rm d}^{(i)}$を求める．
 		\begin{equation}
 			p_{\rm d}^{(i)}= \sum_{k\in\mthnk}\sum_{j\in\mthnj}p^{(i,j,k)}, \ \forall i \in \{0\}\cup{\mathcal N}
 		\end{equation}
 		APはこの確率$p_{\rm d}^{(i)}$に従って確率的にSTA $i$を選択する．
-		ここで下り通信の送信先として決定したSTAをSTA $i^*$とする．
+		確率的に決定されたSTAをここではSTA $i^*$とする．
 		このとき$i^*=0$であれば，下り通信が行われないことを示す．
 		STA $i^*$の決定後，STA $i^*$を含めた全てのSTAはどのSTAがAPからの下り通信の送信先となったのかを知る必要があるため，
 		APはSTA $i^*$へ送信するデータフレームのヘッダ部分のみを送信し，送信先がSTA $i^*$であることを全STAに通知する．
@@ -357,7 +366,7 @@
 		このSTAをSTA $k^*$と呼ぶこととし，$k^*=0$のときはSTA $k$による上り通信は行われないことを示す．
 		また，$k^*=j^*$のときは上り通信にOFDMAを適用せずに1台のSTAによって上り通信が行われることを示す．
 		これをもって通信を行うSTAの組み合わせが決定したこととなる．
-		組み合わせ決定後，AP，STA $j^*$はデータフレームの残りの部分を，$k^*$はデータフレームを送信する．
+		組み合わせ決定後，AP，STA $j^*$はデータフレームの残りの部分を，STA $k^*$はデータフレームを送信する．
 
 	\subsection{計算時間の削減}\label{sec:time}
 		\begin{figure}[t]
@@ -367,29 +376,24 @@
 			\label{fig:time_image}
 		\end{figure}
 		本節では，最適化問題を解くための計算時間を削減する手法について検討する．
-		APは前節の最適化問題を定期的に解いて，確率$\pijk$を更新しなければならない．
-		なぜなら，目的関数に含まれる送信待機時間$d^{(j)}$，$d^{(k)}$は時間変化する値であるためである．
-		計算結果はビーコンフレームによって全STAに通知されるが，一般的なビーコン周期は100\,msであり，
-		ビーコンフレームを送信する度に最適化問題を解く場合は最大で100\,ms以内に解かねばならず，
-		仮にビーコンフレーム送信の数回毎に更新するように計算頻度を減らしたとしても数百ミリ秒単位で解けなければならない．
-		一方，STAが50台存在する場合に，すべての組み合わせを対象として最適化問題を解くためには1秒程度必要であることがシミュレーションにより判明しているため，
-		計算時間を削減することを考えなければならない．
+		第\ref{sec:opt}で述べたように，APは最適化問題を定期的に解き確率$\pijk$を更新する．
+		確率$\pijk$は，STAの参加離脱，移動による$\rijk$の変化，$d^{(j)}$，$d^{(k)}$の更新など状態の変化に追従するよう更新する必要があるため，
+		数百ミリ秒単位で最適化問題を解く必要がある．
+		提案方式の最適化問題は線形最適化問題であるが，変数の数を$n$とすると計算量は$O(n^{3.5})$であり[参考文献]，指数的に増加する．
+		変数の数は送受信STAの組み合わせの数$|{\mthc}|$であり，STA台数を$N$台，OFDMAの多重数を$M$とすると，
+		最大で$(N+1)N^M-1$となる．
+		そのため，$N$が大きくなると計算量が爆発的に大きくなる．
 		\par
-		一般的に最適化問題の計算時間は変数の数に依存する．
-		提案方式における変数は$\pijk$であり，この数は組み合わせの数$|\mthc|$と同じである．
-		したがって，集合$\mthc$に含まれる組み合わせの数を減らすことができれば計算時間を削減することができる．
-		最適化の結果に与える影響をできるだけ小さくしながら組み合わせの数を減らすためには，
-		ユーザ間干渉が大きく，例え通信ができたとしても伝送速度が低くなってしまうような組み合わせを除けばよい．
+		そこで，本稿では計算時間削減の初期検討として，選択可能なSTA組を制限する手法を検討する．
+		ある送受信STA組におけるスループットはユーザ間干渉が大きいほど減少する傾向にある，
+		また，ユーザ間干渉の大きさはSTAの地理的位置に依存し，受信STAと送信STAとの距離が遠くなるような，
+		APを中心として両者が対角に位置するときに干渉が小さくなる傾向にある．
+		そこで，STAを位置によってグループ分けし組み合わせを特定のグループ間のSTAに限定することで組み合わせの数を削減する．
 		\par
-		そこで，本稿では計算時間の削減を行うためにSTAを位置によってグループ分けを行い，その中から組み合わせを決定するという方法をとる．
-		具体的には，図\ref{fig:time_image}のようにAPを中心とした直交座標を設定し，それぞれのSTAがどの象限に位置するかによって4つのグループに分ける．
-		そして，組み合わせの集合$\mthc$には，OFDMAとUFD通信を組み合わせる場合はSTA $i$と2台のSTA $j$，$k$は対角の象限，STA $j$と$k$は同じ象限に存在するような組み合わせ，UFD通信の場合はSTA$i$と$j$は対角の象限に存在する組み合わせのみ含める．
-		ユーザ間干渉はSTA $i$とSTA $j$，$k$の間の距離が小さいほど大きくなるため，
-		STA $i$とSTA$j$，$k$が隣り合った象限に存在する組み合わせはユーザ間干渉が大きくなる可能性が高い．
-		そのため，そういった組み合わせは選択される可能性が低く，選択対象から除外しても影響は小さいと考えられる．
-		\par
-		ただし，本稿においてはSTAの位置は既知であるとし，時間変化はないものとする．
-
+		STAの組み合わせをユーザ間干渉が小さくなる可能性が高い組み合わせのみに限定するため，
+		下り通信を行うSTA $i$と上り通信を行う2台のSTA $j$，$k$がAPを中心として対角の位置に存在する組み合わせのみを最適化の対象とする．
+		図\ref{fig:time_image}のようにAPを中心とした直交座標を設定し，それぞれのSTAがどの象限に位置するかによって4つのグループに分ける．
+		そして，組み合わせの集合$\mthc$には，OFDMAとUFD通信を組み合わせる場合はSTA $i$と2台のSTA $j$，$k$は対角の象限，STA $j$と$k$は同じ象限に存在するような組み合わせ，UFD通信の場合はSTA$i$と$j$は対角の象限に存在する組み合わせのみを含める．
 
 \section{シミュレーション評価}
 
@@ -421,14 +425,12 @@
 	式\eqref{eq:etau}における$\eta_{\rm u}^{(l)}$には各STA共通の$1/(N+1)$を設定している．
 	伝送速度はIEEE 802.11aに従う．
 	上下通信ともに飽和トラヒックであり，APには1500\,Bの，STAには64\,Bのデータフレームが発生しているものとする．
-	これは，トラヒックのほとんどが64\,B以下の短いフレームと1500\,B付近の長さのフレームによって占められるからである~\cite{traffic}．
-	また，本稿では遅延時間を送信待機時間と定義する．
+	これは，トラヒックの多くがTCP-ACKを中心とする64\,B以下のフレームと1500\,Bのフレームによって占められるからである~\cite{traffic}．
 
-	\subsection{遅延時間の削減}
 		\begin{figure}[t]
 			\centering
 			\epsfig{file=graph/delay.eps, scale=0.6}
-			\caption{STAの平均送信待機時間}
+			\caption{上り通信の平均遅延時間}
 			\label{fig:delay}
 		\end{figure}
 		\begin{figure}[t]
@@ -440,24 +442,24 @@
 		\begin{figure}[t]
 			\centering
 			\epsfig{file=graph/cdf.eps, scale=0.6}
-			\caption{各STAの平均送信待機時間のCDF}
+			\caption{ある試行における各STAの平均遅延時間のCDF}
 			\label{fig:cdf}
 		\end{figure}
 
-		図\ref{fig:delay}，\ref{fig:thr}にSTAの平均送信待機時間とシステムスループットを示す．
-		ただし，平均送信待機時間とは各STAにおいて送信毎の送信待機時間の平均をとった後，全STAにおいて平均をとったものである．
-		半二重通信とUFD通信を用いる従来方式の送信待機時間は半二重通信と比べ大きい．
-		一方，提案方式はパラメータ$\alpha$を大きくすることで送信待機時間を半二重通信と同等の値まで削減できている．
+		\par
+		図\ref{fig:delay}，\ref{fig:thr}にSTAの平均遅延時間とシステムスループットを示す．
+		半二重通信とUFD通信を用いる従来方式の遅延時間は半二重通信と比べ20\,ms以上大きい．
+		一方，提案方式はパラメータ$\alpha$を大きくすることで遅延時間を半二重通信と同等の値まで削減できている．
 		しかし，$\alpha$が大きくなるにつれて，システムスループットが低下している．
-		これは，送信待機時間$d^{(j)},\ d^{(k)}$の項の影響が大きくなり，遅延時間削減を優先しているためである．
-		$\alpha$を増加させ遅延時間削減を優先した結果，システムスループットは低下したものの，半二重通信に対しては3倍程度の値を維持しつつ，
+		これは，最適化問題の目的関数において$d^{(j)},\ d^{(k)}$の項の影響が大きくなり，スループットの低下による利得の減少より遅延時間削減による利得向上が上回るためである．
+		提案方式はシステムスループットは低下したものの，半二重通信に対しては3倍程度の値を維持しつつ，
 		遅延時間を半二重通信と同等まで削減することができた．
 		\par
-		図\ref{fig:cdf}に各STAの平均送信待機時間のCDF（Cumulative distribution functioin）を示す．
-		提案方式は半二重通信と比較して平均送信待機時間のばらつきが大きいものの，従来方式と比べると小さい．
-		これは各STA間の送信待機時間に関する公平性が高いことを示す．
+		STA間の公平性を示すため，図\ref{fig:cdf}に各STA毎の平均遅延時間のCDF（Cumulative distribution functioin）を示す．
+		半二重通信では全STAが平等に送信機会を獲得するため，STA間の遅延時間のばらつきは非常に小さい．
+		提案方式は半二重通信には及ばないものの，従来方式と比べて大幅にばらつきが小さくなっており，
+		遅延時間に対する公平性が高いことを示している，
 
-	\subsection{計算時間の削減}
 		\begin{table}[t]
 			\centering
 			\caption{最適化問題を1回解くために必要な平均時間}
@@ -474,14 +476,13 @@
 %			\label{fig:thr_time}
 %		\end{figure}
 
+	\par
 	次に計算時間について評価する．
 	表\ref{tab:time}に第\ref{sec:time}節で述べた計算時間削減手法を用いた場合と用いない場合について，
 	最適化問題を一回解くために必要な平均時間を示す．
-	計算時間を72\%削減できている．
-	さらに，計算時間削減手法を用いたことによる影響を調べるために図\ref{fig:thr}の両者のシステムスループットを比較すると，
-	全体的に計算時間削減手法を用いた方が用いない場合に比べてシステムスループットが小さくなっている．
-	差は$\alpha=0$のときには1\%，$\alpha=1$のときには18\%となっている．
-	簡易な方式ながら大幅な計算時間削減が可能である．
+	計算時間を72\%削減できている一方，送受信STAの組み合わせを制限するため，利得の高い組み合わせまで除外されることがありシステムスループットが低下する．
+	図\ref{fig:thr}より計算量削減手法を用いた場合でもシステムスループットの低下は最大18\%となった．
+	簡易な方式ながら，システムスループットを大幅に低下させることなく，計算時間を削減することができた．
 %	$\alpha$が小さいときには送信待機時間$d^{(j)},\ d^{(k)}$の影響が小さく，
 %	干渉の小さな組み合わせが選ばれやすい．
 %	干渉の小さな組み合わせは，APに対してSTA $i$とSTA $j$，$k$が対角の位置に存在している場合であり，
@@ -494,7 +495,7 @@
 \section{まとめ}
 	本稿では，OFDMAとUFD通信を組み合わせて用いる手法を提案した．
 	STAの遅延時間が増大するというUFD通信の問題点を，上り通信をOFDMAにより多重化し，
-	STAの送信機会を増加させることで遅延時間の削減を行った．
+	STAの送信機会を増加させることで改善を行った．
 	更に，STAのグループ分けを行い最適化問題の変数の数を減らすことで，計算時間を削減する手法についても述べた．
 
 \bibliographystyle{sieicej}
